# validate_email

./: CMakeLists.txt  bad_addresses.json  good_addresses.json  main.cpp  puny_tests.json  punycode.cpp  validate_email.cpp  validate_email_test.cpp
include/: punycode.h  punycode.h.old  validate_email.h
src/: validate_email.cpp
tests/: validate_email_test.cpp
